# Tep_cpp

./: CMakeLists.txt  Person.hpp  README.md  main.cpp
src/: CTable.hpp  Tool.hpp
src/Zad1/: CTable.hpp  Functions.h
src/Zad2/: CNumber.cpp  CNumber.h  Constans.h  ConstansZad2.h
src/Zad3/: CLI.cpp  CLI.h  CLIZad3.cpp  CLIZad3.h  CNode.cpp  CNode.h  CTree.cpp  CTree.h  Constans.h  ConstansZad3.h  ONPgenerator.cpp  ONPgenerator.h  Operators.cpp  Operators.h
src/Zad4/: CError.cpp  CError.h  CResult.cpp  CResult.h  ConstansZad4.h  Functions.cpp  Functions.h  Saver.cpp  Saver.h  file123456789.txt
src/Zad5/: CMySmartPointer.cpp  CMySmartPointer.h  CRefCounter.cpp  CRefCounter.h
tests/: test.cpp  test_zad3.cpp
